add list of courses and search courses

--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,8 +1,8 @@
-<div style="margin-top: 200px" class="connexionFormulaire">
+<div style="margin-top: 200px" class="connexionFormulaire col-6 center-element ">
 
-<form [formGroup]="connexionForm" (ngSubmit)="connexionValide()"  class=" formulaire center-element">
+<form [formGroup]="connexionForm" (ngSubmit)="connexionValide()"  class=" formulaire center-element col-12">
   <h1 class="text-center m-t-4">Conenxion utilisateur</h1>
-  <div  class="d-flex flex-column justify-content-center col-6 center-element">
+  <div  class="d-flex flex-column justify-content-center col-8 center-element">
   <div class="mb-3">
     <label for="utilisateur" class="form-label">Nom utilisarteur</label>
     <input type="text" class="form-control"
