add list of courses and search courses and form for create courses

--- a/src/app/cours/cherchercours/cherchercours.component.html
+++ b/src/app/cours/cherchercours/cherchercours.component.html
@@ -1,1 +1,12 @@
-<p>cherchercours works!</p>
+<div class="w-100">
+<h2>Chercher Votre Cours</h2>
+<input class="mb-20 w-50" type="text"placeholder="Rechercher un cours" [(ngModel)]="search">
+<ul class="list-group">
+  <li class="list-group-item">An item</li>
+  <li class="list-group-item">A second item</li>
+  <li class="list-group-item">A third item</li>
+  <li class="list-group-item">A fourth item</li>
+  <li class="list-group-item">And a fifth one</li>
+</ul>
+
+</div>
