--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -1,3 +1,6 @@
-<div class="container">
-
+<div class="container d-flex flex-row justify-content-around">
+  <app-cherchercours class="w-50 m-1" ></app-cherchercours>
+  <div class="w-50">
+    <router-outlet></router-outlet>
+  </div>
 </div>
