--- a/src/app/cours/creercours/creercours.component.html
+++ b/src/app/cours/creercours/creercours.component.html
@@ -1,1 +1,49 @@
-<p>creercours works!</p>
+<div class="w-100 m-1">
+  <h2>Creer un cours</h2>
+  <form [formGroup]="creerCoursForm"  (ngSubmit)="creerCours(creerCoursForm.value)">
+    <div class="mb-3">
+      <label for="name" class="form-label">Nom du Cours</label>
+      <input type="text" formControlName="name"
+             class="form-control" id="name"
+             aria-describedby="emailHelp">
+    </div>
+    <div class="mb-3">
+      <label for="description" class="form-label">Contenu du Cours</label>
+      <textarea formControlName="description"
+        class="form-control"
+        id="description"
+        rows="3"></textarea>
+    </div>
+    <div class="mb-3">
+      <select class="form-select" formControlName="categorie"
+              aria-label="Default select example">
+        <option selected>Categorie</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+    <div class="mb-3">
+      <select class="form-select" formControlName="sujet"
+              aria-label="Default select example">
+        <option selected>Sujet</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+    <div class="mb-3">
+      <label for="heure" class="form-label">heure debut</label>
+      <input
+        formControlName="heuredebut"
+        type="email" class="form-control" id="heure" aria-describedby="emailHelp">
+    </div>
+    <div class="mb-3">
+      <label for="nbetudiant" class="form-label">nombre etudiant</label>
+      <input
+        formControlName="nombreEtudiants"
+        type="email" class="form-control" id="nbetudiant" aria-describedby="emailHelp">
+    </div>
+    <button type="submit" class="btn btn-primary">Créer cours</button>
+  </form>
+</div>
