add observable to generate liste of course in the search component

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-row justify-content-around">
-  <app-cherchercours class="w-50 m-1" ></app-cherchercours>
+  <app-cherchercours class="w-50 m-1"  [cours]="cours"></app-cherchercours>
   <div class="w-50">
     <router-outlet></router-outlet>
   </div>
