add details courses

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex flex-row justify-content-around">
-  <app-cherchercours class="w-50 m-1"  [cours]="cours"></app-cherchercours>
+  <app-cherchercours class="w-50 m-1 liste"  [cours]="cours"></app-cherchercours>
   <div class="w-50">
-    <router-outlet></router-outlet>
+    <router-outlet ></router-outlet>
   </div>
 </div>
