--- a/src/app/cours/detailcours/detailcours.component.html
+++ b/src/app/cours/detailcours/detailcours.component.html
@@ -1,1 +1,17 @@
-<p>detailcours works!</p>
+<div class="container">
+<h2>Detail du cours</h2>
+  <div class="center-element w-75">
+    <ul>
+      <hr>
+      <li>{{cours.name}}</li>
+      <hr>
+      <li>{{cours.description}}</li>
+      <hr>
+      <li>{{cours.categorie}}</li>
+      <hr>
+      <li>{{cours.sujet}}</li>
+      <hr>
+      <li>{{cours.heuredebut}}</li>
+    </ul>
+  </div>
+</div>
