--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,3 +84,12 @@ a{
 .active{
   background-color: #12CBC4;
 }
+
+
+
+input {
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  padding: 8px 15px;
+}
+
