--- a/src/app/cours/cherchercours/cherchercours.component.html
+++ b/src/app/cours/cherchercours/cherchercours.component.html
@@ -1,7 +1,8 @@
 <div class="w-100">
 <h2>Chercher Votre Cours</h2>
-<input class="mb-20 w-50" type="text"placeholder="Rechercher un cours" [(ngModel)]="search">
-<ul class="list-group" *ngFor="let cours of cours; let index = index" >
-  <li class="list-group-item" [routerLink]="[index]"  routerLinkActive="active">{{cours.name}}</li>
+<input class="mb-20 w-50" type="text" placeholder="Rechercher un cours" [(ngModel)]="search">
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let cours of cours$ | recherche:search ; let index = index"
+      [routerLink]="[index]" routerLinkActive="active">{{cours.title}}</li>
 </ul>
 </div>
