mise en place de firebase pour la base de donnée et refacto des services

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex flex-row justify-content-around">
-  <app-cherchercours class="w-50 m-1 liste"  [cours$]="cours$ | async"></app-cherchercours>
+  <app-cherchercours class="w-50 m-1 liste"  [cours$]="coursFire"></app-cherchercours>
   <div class="w-50">
     <router-outlet ></router-outlet>
   </div>
