--- a/src/app/cours/creercours/creercours.component.html
+++ b/src/app/cours/creercours/creercours.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="creerCoursForm"  (ngSubmit)="creerCours(creerCoursForm.value)">
     <div class="mb-3">
       <label for="name" class="form-label">Nom du Cours</label>
-      <input type="text" formControlName="name"
+      <input type="text" formControlName="titre"
              class="form-control" id="name"
              aria-describedby="emailHelp">
     </div>
