--- a/src/app/cours/detailcours/detailcours.component.html
+++ b/src/app/cours/detailcours/detailcours.component.html
@@ -3,7 +3,7 @@
   <div class="center-element w-75">
     <ul *ngIf="cours">
       <hr>
-      <li>{{cours.title}}</li>
+      <li>{{cours.titre}}</li>
       <hr>
       <li>{{cours.description}}</li>
       <hr>
