--- a/src/app/cours/creercours/creercours.component.html
+++ b/src/app/cours/creercours/creercours.component.html
@@ -15,22 +15,16 @@
         rows="3"></textarea>
     </div>
     <div class="mb-3">
-      <select class="form-select" formControlName="categorie"
-              aria-label="Default select example">
-        <option selected>Categorie</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
+      <label for="Categorie" class="form-label">Categorie</label>
+      <input
+        formControlName="categorie"
+        type="email" class="form-control" id="Categorie" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
-      <select class="form-select" formControlName="sujet"
-              aria-label="Default select example">
-        <option selected>Sujet</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
+      <label for="Sujet" class="form-label">Sujet</label>
+      <input
+        formControlName="sujet"
+        type="email" class="form-control" id="Sujet" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="heure" class="form-label">heure debut</label>
