--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,11 @@
 
   <a class="logo  m-2">COURS</a>
   <ul class=" m-2">
-    <li>mon compte</li>
-    <li routerLink="/cours/creationcours">creer</li>
+    <li routerLink="/cours">mon compte</li>
+    <li *ngIf="(connexionService.user$ | async)" (click)="seDeconnecter()">Deconnexion</li>
+    <span *ngIf="isProf && (connexionService.user$ | async)" >
+    <li routerLink="/cours/creationcours">creer Cours</li>
+    <li routerLink="/creationUtilisateur">creer Utilisateur</li>
+    </span>
   </ul>
 </div>
