--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,11 +2,13 @@
 
   <a class="logo  m-2">COURS</a>
   <ul class=" m-2">
+
+    <span *ngIf="isProf && (connexionService.user$ | async)" >
+      <li routerLink="/cours">Cours</li>
+      <li routerLink="/cours/creationcours">creer Cours</li>
+      <li routerLink="/creationUtilisateur">creer Utilisateur</li>
+    </span>
     <li *ngIf="(connexionService.user$ | async)" (click)="seDeconnecter()">Deconnexion</li>
     <li *ngIf="!(connexionService.user$ | async)" (click)="seDeconnecter()">conexxion</li>
-    <span *ngIf="isProf && (connexionService.user$ | async)" >
-    <li routerLink="/cours/creationcours">creer Cours</li>
-    <li routerLink="/creationUtilisateur">creer Utilisateur</li>
-    </span>
   </ul>
 </div>
